@ConfigurationProperties 활용, 테스트 코드 작성

--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,7 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  compileOnly "org.projectlombok:lombok"
+  compileOnly "org.springframework.boot:spring-boot-configuration-processor"
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
