--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   runtime "com.h2database:h2"
   compileOnly "org.projectlombok:lombok"
   compileOnly "org.springframework.boot:spring-boot-configuration-processor"
